# oequant

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: index.html  style.css
examples/: intro.html  intro.ipynb  intro.py  intro_signal_research.py
oequant/: __init__.py
oequant.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
oequant/backtesting/: __init__.py  core.py  results.py
oequant/charting/: __init__.py  core.py
oequant/data/: __init__.py  core.py
oequant/evaluations/: __init__.py  core.py
oequant/research/: __init__.py  returns.py
oequant/research/signal/: __init__.py  quantile_analysis.py
oequant/tests/utils/: __init__.py  test_pandas_extensions.py
oequant/utils/: __init__.py  package_utils.py  pandas_extensions.py
tests/backtesting/: test_backtest.py  test_results.py
tests/charting/: test_charting.py
tests/evaluations/: test_evaluations.py
tests/research/: __init__.py  test_returns.py
tests/research/signal/: __init__.py  test_quantile_analysis.py
