[project]
name = "oequant"
version = "0.1.0"
description = "Quantitative trading backtesting package"
authors = [{ name = "Your Name", email = "you@example.com" }] # Please update this
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5,<3.0",
    "numpy>=1.20,<1.24", # Pinned due to pandas-ta for now
    "yfinance>=0.2,<0.3",
    "matplotlib>=3.0,<4.0", # Retained for now, though primary is Bokeh
    "bokeh>=2.4,<4.0",
    "pandas-ta>=0.3.14b",
    "tabulate>=0.9,<0.10", # Added tabulate
    "setuptools",
    "plotly>=6.0.1",
    "seaborn>=0.13.2",
]

[project.urls]
Homepage = "https://github.com/yourusername/oequant" # Please update this
Repository = "https://github.com/yourusername/oequant" # Please update this

[project.optional-dependencies]
dev = [
    "pytest",
    "bokeh"
]

[tool.uv]
# Configuration for uv can be added here if needed 